# pdf-extraction-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2880bf4ea04c_create_documents_table.py
docs/: api_contract.md  implementation_plan.md  overview.md
src/: api.py  config.py  converter.py  logging.py  schemas.py  storage.py  worker.py
src/api/: __init__.py  app.py  routes.py
src/db/: database.py  models.py  repository.py
